[project]
name = "pypork"
description = "A Python library/wrapper for the porkbun.com REST API"
license = { text = "AGPL-3.0-or-later" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.9"

authors = [
    { name = "Urufusan", email = "urufusan@discord.gg" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests",
]

[project.urls]
source = "https://github.com/Urufusan/pypork"
tracker = "https://github.com/Urufusan/pypork/issues"

[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"